--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Victor"
+  name             : "Wei (Victor) Yang"
   avatar           : "profile.png"
   bio              : "Machine Learning Engineer at RSVP.ai, MMath graduate at University of Waterloo"
   location         : "Waterloo, ON, Canada"
