--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Wei (Victor) Yang"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Machine Learning Engineer at RSVP.ai, MMath graduate at University of Waterloo"
   location         : "Waterloo, ON, Canada"
   employer         :
