--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/wei-yang-b5a196aa/"
+  linkedin         : "wei-yang-b5a196aa/"
   orcid            : "http://orcid.org/0000-0002-8871-968X"
   pinterest        :
   soundcloud       :
