--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   instagram        : 
   lastfm           :
   linkedin         : "wei-yang-b5a196aa/"
-  orcid            : ""
+  orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
