--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "About"
     url: /about/
 
-  - title: "CV"
+  - title: "Resume"
     url: /cv/
 
-  - title: "Talks"
+  - title: "Talks & Projects"
     url: /talks/
